// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Text renders RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        dir="rtl"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        dir="rtl"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          dir="rtl"
          placeholder=" "
          readOnly={true}
          type="text"
          value="Read only text"
        />
        <label
          className="sc-fOFsmt grWraG"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc eMCOvo"
      disabled={true}
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          disabled={true}
          placeholder=" "
          type="text"
          value="Text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX jBhaYg"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX bVIEYj"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX iUwrth"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW cTcwZW"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder=" "
          readOnly={true}
          type="text"
          value="Read only text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX edEsCe"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX hfbpVV"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <input
        className="sc-oEczX edEsCe"
        placeholder="medium"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <input
        className="sc-oEczX hfbpVV"
        placeholder="large"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs ljbyZX"
      >
        <input
          className="sc-oEczX BdQpe"
          placeholder="xlarge"
          type="text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        medium
      </label>
      <input
        className="sc-oEczX cNRlAp"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <label
        className="sc-fpJand epFuGy"
      >
        large
      </label>
      <input
        className="sc-oEczX ldvpAa"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-imdKTc fRrbyC"
    >
      <div
        className="sc-iLacSs iRhLvk"
      >
        <input
          className="sc-oEczX hgcMuz"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="sc-fOFsmt rrBYZ"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dkYNfW gVjUnq"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
